Many things : the mean value for lobby + window rearage for "games" + javadocs

--- a/src/main/resources/themes/default/main.fxml
+++ b/src/main/resources/themes/default/main.fxml
@@ -41,7 +41,7 @@
                 <MenuItem mnemonicParsing="false" text="Action 2" />
               </items>
                <HBox.margin>
-                  <Insets right="120.0" />
+                  <Insets />
                </HBox.margin>
             </MenuButton>
          </children>
